--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ $('body').on('submit', '#send-form', function() {
 		
 		if (data['stat'] === true) {
 			
-			$(form).empty().prepend('<div class="answer">Спасибо, ваше сообщение отправлено!</div>');
+			$(form).empty(); //.prepend('<div class="answer">Спасибо, ваше сообщение отправлено!</div>');
+			$('.wm').show();
 			
 		} else {
 			
@@ -396,11 +397,14 @@ $('body').on('submit', '#send-form', function() {
 						<button class="btn_b">Заказать</button>
 						
 					</form>
-					<form action="https://merchant.webmoney.ru/lmi/payment.asp" method="POST">
+					<form action="https://merchant.webmoney.ru/lmi/payment.asp" method="POST" class="col-md-6 wm" style="text-align: center;display: none;">
+						<div class="p_title" style="font-size: 28px;padding-top: 20px;">Спасибо за заказ!</div>
+						<div class="p_text" style="font-size: 20px; padding-top: 15px;">Для того, чтобы подтвердить заказ, нажмите на кнопку “Оплатить”!</div>
  <input type="hidden" name="LMI_PAYMENT_AMOUNT" value="5000.00">
  <input type="hidden" name="LMI_PAYMENT_DESC_BASE64" value="0LDRgdGC0YDQvtC70L7Qs9C40YfQtdGB0LrQuNC5INC60LDQu9C10L3QtNCw0YDRjA==">
  <input type="hidden" name="LMI_PAYEE_PURSE" value="R195982866918">
-<input type="submit" class="wmbtn" style="font-famaly:Verdana, Helvetica, sans-serif!important;padding:0 10px;height:30px;font-size:12px!important;border:1px solid #538ec1!important;background:#a4cef4!important;color:#fff!important;" value="&#1086;&#1087;&#1083;&#1072;&#1090;&#1080;&#1090;&#1100;5000.00 WMR ">
+<input type="submit" class="wm-bt" style="height:56px; line-height: 56px; background: #2c3169; border-radius: 5px; border: none; font-size: 20px; padding: 0 10px; margin-top: 20px;" value="Оплатить 5000.00 WMR">
+<div style="padding: 20px 0 130px 0;"><img src="/img/logo-wm.png"></div>
 </form>
 					
 				</div>
